fix: spacing in the main section

--- a/src/AppView/Components/CueListComponent.css
+++ b/src/AppView/Components/CueListComponent.css
@@ -12,7 +12,7 @@
     font-size: 1rem;
     max-height: 100% !important;
 
-    height: auto;
+    height: 100%;
 
     overflow-y: auto;
     overflow-x: hidden;
